# es-py

./: README.md  main.py  pyproject.toml  requirements.txt
index/: __init__.py  config_read.py  elasticsearch_indexer.py
index/analysis_group_index/: analysis_group.json  fetch_ag_from_db.py  indexing.py
index/data_collection_index/: __init__.py  data_collections.json  fetch_information_from_db.py  indexing.py  utils.py
index/file_index/: fetch_information_from_db.py  file.json  indexing.py  utils.py
index/population_index/: __init__.py  elasticsearch_indexer.py  fetch_information_from_db.py  indexing.py  population_index.py  populations_mappings.json  utils.py
index/sample_index/: fetch_samples_from_db.py  indexing.py  sample.json  utils.py
index/super_population_index/: fetch_information_from_db.py  indexing.py  superpopulations_mappings.json
index/tests/analysis_group_index/: test_fetch_analysisgroup_from_db.py
index/tests/data_collection_index/: test_fetch_datacollections_from_db.py
index/tests/population_index/: test_fetch_population_from_db.py
index/tests/sample_index/: test_fetch_sample_from_db.py
index/tests/super_population_index/: test_fetch_superpop_from_db.py
