[project]
name = "es-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elasticsearch>=8.17.2",
    "ruff>=0.11.4",
    "mocker>=1.1.1",
    "mysql-connector-python>=9.2.0",
    "pytest>=8.4.0",
    "pytest-mock>=3.14.1",
    "urllib3>=2.3.0",
]
[tool.ruff]
# Extend the `pyproject.toml` file in the parent directory...
line-length = 88
indent-width = 4
[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]
#ignore = ["E203", "E501"]  # Ignore specific errors (e.g., E203 for whitespace around ":")